--- a/css/style.css
+++ b/css/style.css
@@ -99,7 +99,8 @@
 #wrap #main .section1 .sec1_container .sec1_content .slide_text1 {
   position: absolute;
   top: 0;
-  left: 470px;
+  left: 478px;
+  left: calc(50% - 478.5px);
   width: 957px;
   height: 345px;
   text-align: center;
@@ -168,11 +169,13 @@
   text-decoration: underline;
   text-decoration-thickness: 0;
   text-underline-position: under;
+  letter-spacing: -0.5rem;
 }
 #wrap #main .section1 .sec1_container .sec1_content .slide_text2 .sec1_img2 {
   position: absolute;
   left: 1060px;
-  top: 110px;
+  left: calc(50% - 61.5px + 170px);
+  top: 100px;
   width: 123.1px;
   height: 120.34px;
   animation: sec1Img2 4s ease-in-out infinite;
@@ -196,12 +199,13 @@
 }
 #wrap #main .section1 .sec1_container .sec1_content .slide_text2 .st {
   position: absolute;
-  right: 0;
+  right: 45px;
   top: 10px;
   color: #000;
   text-decoration: underline;
   text-decoration-thickness: 0;
   text-underline-position: under;
+  letter-spacing: -0.5rem;
 }
 @keyframes slide1 {
   from {
@@ -209,13 +213,13 @@
     opacity: 0;
   }
   to {
-    left: 470px;
+    left: calc(50% - 478.5px);
     opacity: 1;
   }
 }
 @keyframes disappear {
   from {
-    left: 470px;
+    left: calc(50% - 478.5px);
     opacity: 1;
   }
   to {
@@ -246,7 +250,7 @@
 #wrap #main .section2 .sec2_container .sec2_content {
   position: absolute;
   top: 450px;
-  left: calc(50% - 609.5px - 0.5px);
+  left: calc(50% - 609.5px + 30px);
   width: 1220px;
   height: 170px;
   color: #000;
@@ -259,19 +263,23 @@
 }
 #wrap #main .section2 .sec2_container .sec2_content .h3 {
   position: absolute;
-  left: 370px;
+  left: 335px;
   top: 0;
   font-weight: 300;
   font-size: 40px;
   line-height: 50px;
+  letter-spacing: -0.2rem;
 }
 #wrap #main .section2 .sec2_container .sec2_content .h4 {
   position: absolute;
-  text-align: center;
+  left: 90px;
   top: 70px;
+  text-align: center;
   font-weight: 700;
   font-size: 80px;
   line-height: 125px;
+  text-rendering: optimizeLegibility;
+  letter-spacing: -0.1rem;
 }
 #wrap #main .section3 .sec3_container .sec3_content {
   position: absolute;
@@ -290,6 +298,7 @@
   font-size: 200px;
   line-height: 242px;
   color: #000;
+  letter-spacing: -0.5rem;
 }
 #wrap #main .section3 .sec3_container .sec3_content .sec3_gap {
   position: absolute;
@@ -317,12 +326,12 @@
   font-family: "Outfit";
   font-style: normal;
   font-weight: 100;
+  letter-spacing: -0.3rem;
 }
 #wrap #main .section3 .sec3_container .sec3_content .sec3_gap a img {
   position: absolute;
   top: 40px;
   left: 530px;
-  animation: sec3Img 1s 3 ease;
 }
 #wrap #main .section3 .sec3_container .sec3_content .sec3_gap .we {
   position: absolute;
@@ -332,6 +341,7 @@
   font-family: "Outfit";
   font-style: normal;
   font-weight: 100;
+  letter-spacing: -0.3rem;
 }
 #wrap #main .section3 .sec3_container .sec3_content .sec3_gap .sec3_brace2 {
   position: absolute;
@@ -347,17 +357,7 @@
   font-weight: 300;
   font-size: 200px;
   color: #000;
-}
-@keyframes sec3Img {
-  0% {
-    transform: scale(1);
-  }
-  50% {
-    transform: scale(1.3);
-  }
-  100% {
-    transform: scale(1);
-  }
+  letter-spacing: -0.5rem;
 }
 #wrap #main .section4 .sec4_container .sec4_content {
   position: absolute;
@@ -376,6 +376,7 @@
   font-size: 200px;
   line-height: 242px;
   color: #000;
+  letter-spacing: -0.5rem;
 }
 #wrap #main .section4 .sec4_container .sec4_content .sec4_gap {
   position: absolute;
@@ -390,12 +391,12 @@
   line-height: 230px;
   color: #DBB27A;
 }
-#wrap #main .section4 .sec4_container .sec4_content .sec4_gap .sec4_brace1 {
+#wrap #main .section4 .sec4_container .sec4_content .sec4_gap .sec4_text1 .sec4_brace1 {
   position: absolute;
   top: 0;
   left: 0;
 }
-#wrap #main .section4 .sec4_container .sec4_content .sec4_gap .left {
+#wrap #main .section4 .sec4_container .sec4_content .sec4_gap .sec4_text1 .left {
   position: absolute;
   top: 50px;
   left: 120px;
@@ -408,7 +409,7 @@
   line-height: 62px;
   color: #000;
 }
-#wrap #main .section4 .sec4_container .sec4_content .sec4_gap .right {
+#wrap #main .section4 .sec4_container .sec4_content .sec4_gap .sec4_text2 .right {
   position: absolute;
   top: 75px;
   right: 140px;
@@ -421,7 +422,7 @@
   line-height: 30px;
   color: #000;
 }
-#wrap #main .section4 .sec4_container .sec4_content .sec4_gap .sec4_brace2 {
+#wrap #main .section4 .sec4_container .sec4_content .sec4_gap .sec4_text2 .sec4_brace2 {
   position: absolute;
   top: 0;
   right: 30px;
@@ -435,6 +436,7 @@
   font-weight: 300;
   font-size: 200px;
   color: #000;
+  letter-spacing: -0.5rem;
 }
 #wrap #main .section5 .sec5_container .sec5_content {
   position: absolute;
@@ -475,15 +477,16 @@
   font-family: "Cormorant Garamond";
   font-style: italic;
   font-weight: 300;
+  letter-spacing: -0.3em;
 }
 #wrap #main .section5 .sec5_container .sec5_gap .text1 h3 {
   position: absolute;
   top: -25px;
   right: 0;
-  font-size: 180px;
+  font-size: 200px;
   line-height: 260px;
   color: #000;
-  letter-spacing: -0.03em;
+  letter-spacing: -0.3rem;
 }
 #wrap #main .section5 .sec5_container .sec5_gap .text1 h4 {
   position: absolute;
@@ -492,7 +495,7 @@
   font-size: 100px;
   line-height: 121px;
   color: #DBB27A;
-  letter-spacing: -0.03em;
+  letter-spacing: -0.2rem;
 }
 #wrap #main .section5 .sec5_container .sec5_gap .text2 {
   position: absolute;
@@ -520,8 +523,8 @@
 #wrap #main .section6 .sec6_container .sec6_content {
   position: absolute;
   top: 200px;
-  left: calc(50% - 262.5px - 23.5px);
-  width: 800px;
+  left: calc(50% - 262.5px);
+  width: 600px;
   height: 700px;
 }
 #wrap #main .section6 .sec6_container .sec6_content .contact {
@@ -536,10 +539,11 @@
   color: #000;
   justify-items: center;
   align-items: center;
+  letter-spacing: -0.3rem;
 }
 #wrap #main .section6 .sec6_container .sec6_content .sec6_gap {
   position: absolute;
-  left: calc(50% - 166px - 80px);
+  left: calc(50% - 166px);
   top: 250px;
   width: 332px;
   height: 185px;
@@ -569,13 +573,14 @@
 }
 #wrap #main .section6 .sec6_container .sec6_content .proposal {
   position: absolute;
-  left: calc(50% - 287.5px - 50px);
+  left: calc(50% - 287.5px + 50px);
   bottom: 70px;
   font-family: "Cormorant Garamond";
   font-style: italic;
   font-weight: 300;
   font-size: 150px;
   color: #000;
+  letter-spacing: -0.3rem;
 }
 #wrap #main .section7 .sec7_container .sec7_content {
   position: absolute;
@@ -593,7 +598,7 @@
   font-weight: 300;
   font-size: 200px;
   line-height: 242px;
-  letter-spacing: -4px;
+  letter-spacing: -0.3rem;
   color: #000;
 }
 #wrap #main .section7 .sec7_container .sec7_content .sec7_gap {
@@ -618,11 +623,11 @@
 #wrap #main .section7 .sec7_container .sec7_content .sec7_gap h3 {
   position: absolute;
   top: 25px;
-  left: 168px;
+  left: calc(50% - 407px);
   font-family: "SUIT";
   font-style: normal;
   font-weight: 500;
-  font-size: 35px;
+  font-size: 37px;
   line-height: 140%;
   text-align: center;
   color: #000;
@@ -641,7 +646,7 @@
   font-weight: 300;
   font-size: 150px;
   line-height: 182px;
-  letter-spacing: -4px;
+  letter-spacing: -0.3rem;
   color: #000;
 }
 #wrap #main .section8 {
@@ -696,7 +701,7 @@
   font-weight: 300;
   font-size: 200px;
   line-height: 242px;
-  letter-spacing: -4px;
+  letter-spacing: -0.3rem;
   color: #fff;
 }
 #wrap #main .section8 .sec8_container .sec8_content .sec8_gap {
@@ -720,7 +725,7 @@
 #wrap #main .section8 .sec8_container .sec8_content .sec8_gap h3 {
   position: absolute;
   top: 25px;
-  left: 168px;
+  left: calc(50% - 407px);
   font-family: "SUIT";
   font-style: normal;
   font-weight: 500;
@@ -743,30 +748,25 @@
   font-weight: 300;
   font-size: 150px;
   line-height: 182px;
-  letter-spacing: -4px;
+  letter-spacing: -0.3rem;
   color: #DBB27A;
+}
+#wrap #main .section8 .sec8_container .sec8_content .object {
+  position: absolute;
+  left: calc(50% - 125px + 225px);
+  bottom: 0;
+  width: 210px;
+  height: 182px;
 }
 #wrap #main .section8 .sec8_container .sec8_content .object .twinkle {
   position: absolute;
-  right: 300px;
+  left: 0;
   bottom: 15px;
-  animation: opa 2s ease-in 3s;
 }
 #wrap #main .section8 .sec8_container .sec8_content .object .arrow {
   position: absolute;
-  right: 200px;
+  right: 0;
   bottom: 60px;
-}
-@keyframes opa {
-  0% {
-    opacity: 0;
-  }
-  50% {
-    opacity: 0.5;
-  }
-  100% {
-    opacity: 1;
-  }
 }
 #wrap #main .section9 {
   background-color: #FFDA55;
@@ -910,13 +910,15 @@
   height: 423px;
 }
 @keyframes decoLine {
-  0% {
-    width: 1px;
+  from {
+    width: 0px;
     opacity: 0.5;
+    left: -100px;
   }
-  100% {
-    width: 360px;
+  to {
+    width: 22rem;
     opacity: 0.7;
+    left: -10px;
   }
 }
 #wrap #main .section13 {
