--- a/css/style.scss
+++ b/css/style.scss
@@ -119,7 +119,8 @@
           .slide_text1 {
             position: absolute;
             top: 0;
-            left: 470px;
+            left: 478px;
+            left: calc(50% - 957px/2 );
             width: 957px;
             height: 345px;  // img사이즈 높이가 345px
             text-align: center;
@@ -179,15 +180,18 @@
               text-decoration: underline;
               text-decoration-thickness: 0;   // 선 두께
               text-underline-position: under;
+              letter-spacing: -0.5rem;
             }
             .sec1_img2 {
               position: absolute;
               left: 1060px;
-              top: 110px;
+              left: calc(50% - 123px/2 + 170px);
+              top: 100px;
               width: 123.1px;
               height: 120.34px;
               animation: sec1Img2 4s ease-in-out infinite;
             }
+            // 브랜디즘 스튜디오 사이의 별 애니메이션
             @keyframes sec1Img2 {
               0% {transform: rotate(0deg);}
               30% {transform: rotate(5deg);}
@@ -197,12 +201,13 @@
             }
             .st {
               position: absolute;
-              right: 0;
+              right: 45px;
               top: 10px;
               color: #000;
               text-decoration: underline;
               text-decoration-thickness: 0;   // 선 두께
               text-underline-position: under;
+              letter-spacing: -0.5rem;
             }
           }
         }
@@ -210,10 +215,10 @@
       // 섹션1 텍스트 슬라이드 애니메이션 구현
       @keyframes slide1 { 
         from {left: -600px; opacity: 0;}
-        to {left: 470px; opacity: 1;}
+        to { left: calc(50% - 957px/2 ); opacity: 1;}
       }
       @keyframes disappear {
-        from {left: 470px; opacity: 1;}
+        from { left: calc(50% - 957px/2 ); opacity: 1;}
         to {left: -600px; opacity: 0;}
       }
       @keyframes slide2 {
@@ -239,7 +244,7 @@
         .sec2_content {
           position: absolute;
           top: 450px;
-          left: calc(50% - 1219px/2 - 0.5px);
+          left: calc(50% - 1219px/2 + 30px);
           width: 1220px;
           height: 170px;
           color: #000;
@@ -252,20 +257,23 @@
 
           .h3 {
             position: absolute;
-            left: 370px;
+            left: 335px;
             top: 0;
             font-weight: 300;
             font-size: 40px;
             line-height: 50px;
+            letter-spacing: -0.2rem;
           }
           .h4 {
             position: absolute;
-            text-align: center;
-            // left: 0px;
+            left: 90px;
             top: 70px;
+            text-align: center;
             font-weight: 700;
             font-size: 80px;
             line-height: 125px;
+            text-rendering: optimizeLegibility;
+            letter-spacing: -0.1rem;
           }
         }
       }
@@ -294,6 +302,7 @@
             font-size: 200px;
             line-height: 242px;
             color: #000;
+            letter-spacing: -0.5rem;
           }
           .sec3_gap {
             position: absolute;
@@ -321,13 +330,14 @@
               font-family: 'Outfit';
               font-style: normal;
               font-weight: 100;
+              letter-spacing: -0.3rem;
             }
             a {
               img {
                 position: absolute;
                 top: 40px;
                 left: 530px;
-                animation: sec3Img 1s 3 ease;
+                // animation: sec3Img 1s 3 ease;
 
               }
             }
@@ -339,6 +349,7 @@
               font-family: 'Outfit';
               font-style: normal;
               font-weight: 100;
+              letter-spacing: -0.3rem;
             }
             .sec3_brace2 {
               position: absolute;
@@ -356,21 +367,22 @@
             font-size: 200px;
             // line-height: 242px;
             color: #000;
+            letter-spacing: -0.5rem;
           }
         }
       }
-      @keyframes sec3Img {
-        0% {
-          transform: scale(1.0);
-        }
-        50% {
-          transform: scale(1.3);
-        }
-        100% {
-          transform: scale(1.0);
+      // @keyframes sec3Img {
+      //   0% {
+      //     transform: scale(1.0);
+      //   }
+      //   50% {
+      //     transform: scale(1.3);
+      //   }
+      //   100% {
+      //     transform: scale(1.0);
 
-        }
-      }
+      //   }
+      // }
     }
   
     .section4 {
@@ -397,6 +409,7 @@
             font-size: 200px;
             line-height: 242px;
             color: #000;
+            letter-spacing: -0.5rem;
           }
           .sec4_gap {
             position: absolute;
@@ -410,41 +423,45 @@
             font-size: 190px;
             line-height: 230px;
             color: #DBB27A;
-            .sec4_brace1 {
-              position: absolute;
-              top: 0;
-              left: 0;
+            .sec4_text1 {
+              .sec4_brace1 {
+                position: absolute;
+                top: 0;
+                left: 0;
+              }
+              .left {
+                position: absolute;
+                top: 50px;
+                left: 120px;
+                width: 504px;
+                height: 98px;
+                font-family: 'SUIT';
+                font-style: normal;
+                font-weight: 500;
+                font-size: 50px;
+                line-height: 62px;
+                color: #000;
+              }
             }
-            .left {
-              position: absolute;
-              top: 50px;
-              left: 120px;
-              width: 504px;
-              height: 98px;
-              font-family: 'SUIT';
-              font-style: normal;
-              font-weight: 500;
-              font-size: 50px;
-              line-height: 62px;
-              color: #000;
-            }
-            .right {
-              position: absolute;
-              top: 75px;
-              right: 140px;
-              width: 555px;
-              height: 44px;
-              font-family: 'SUIT';
-              font-style: normal;
-              font-weight: 300;
-              font-size: 20px;
-              line-height: 30px;
-              color: #000;
-            }
-            .sec4_brace2 {
-              position: absolute;
-              top: 0;
-              right: 30px;
+            .sec4_text2 {
+              .right {
+                position: absolute;
+                top: 75px;
+                right: 140px;
+                width: 555px;
+                height: 44px;
+                font-family: 'SUIT';
+                font-style: normal;
+                font-weight: 300;
+                font-size: 20px;
+                line-height: 30px;
+                color: #000;
+              }
+              .sec4_brace2 {
+                position: absolute;
+                top: 0;
+                right: 30px;
+              }
             }
           }
           .perfective {
@@ -457,6 +474,7 @@
             font-size: 200px; 
             // line-height: 242px;
             color: #000;
+            letter-spacing: -0.5rem;
           }
         }
       }
@@ -508,14 +526,15 @@
               font-family: 'Cormorant Garamond';
               font-style: italic;
               font-weight: 300;
+              letter-spacing: -0.3em;
               h3 {
                 position: absolute;
                 top: -25px;
                 right: 0;
-                font-size: 180px;
+                font-size: 200px;
                 line-height: 260px;
                 color: #000;
-                letter-spacing: -0.03em;
+                letter-spacing: -0.3rem;
               }
               h4 {
                 position: absolute;
@@ -524,7 +543,7 @@
                 font-size: 100px;
                 line-height: 121px;
                 color: #DBB27A;
-                letter-spacing: -0.03em;
+                letter-spacing: -0.2rem;
               }
             }
             .text2 {
@@ -566,8 +585,8 @@
         .sec6_content {
           position: absolute;
           top: 200px;  
-          left: calc(50% - 525px/2 - 23.5px);
-          width: 800px;
+          left: calc(50% - 525px/2);
+          width: 600px;
           height: 700px;
 
           .contact {
@@ -582,10 +601,11 @@
             color: #000;
             justify-items: center;
             align-items: center;
+            letter-spacing: -0.3rem;
           }
           .sec6_gap {
             position: absolute;
-            left: calc(50% - 332px/2 - 80px);
+            left: calc(50% - 332px/2);
             top: 250px;
             width: 332px;
             height: 185px;
@@ -617,13 +637,14 @@
           }
           .proposal {
             position: absolute;
-            left: calc(50% - 575px/2 - 50px);
+            left: calc(50% - 575px/2 + 50px);
             bottom: 70px; 
             font-family: 'Cormorant Garamond';
             font-style: italic;
             font-weight: 300;
             font-size: 150px;  
             color: #000;
+            letter-spacing: -0.3rem;
           }
         }
       }
@@ -653,7 +674,7 @@
             font-weight: 300;
             font-size: 200px;
             line-height: 242px;
-            letter-spacing: -4px; // 3%
+            letter-spacing: -0.3rem;
             color: #000;
           }
           .sec7_gap {
@@ -677,19 +698,18 @@
             h3 {
               position: absolute;
               top: 25px;
-              left: 168px;
-              // left: 90px;
+              left: calc(50% - 814px/2);
               // width: 814px;
               // height: 79px;
               font-family: 'SUIT';
               font-style: normal;
               font-weight: 500;
-              font-size: 35px;    // 피그마에는 37px인데 집모니터로는 넘 커보임.(다시 확인하기)
+              font-size: 37px;    // 피그마에는 37px인데 집모니터로는 넘 커보임.(다시 확인하기)
               line-height: 140%;  // 51.8px
               text-align: center;
               color: #000
             }
-            .sec7_brace2 {
+            . sec7_brace2 {
               position: absolute;
               top: -40px;
               right: 0;
@@ -704,7 +724,7 @@
             font-weight: 300;
             font-size: 150px;
             line-height: 182px;
-            letter-spacing: -4px; // 3%
+            letter-spacing: -0.3rem;
             color: #000;
           }
         }
@@ -769,7 +789,7 @@
             font-weight: 300;
             font-size: 200px;
             line-height: 242px;
-            letter-spacing: -4px;
+            letter-spacing: -0.3rem;
             color: #fff;
           }
           .sec8_gap {
@@ -792,8 +812,7 @@
             h3 {
               position: absolute;
               top: 25px;
-              left: 168px;
-              // left: 145px;
+              left: calc(50% - 814px/2);
               font-family: 'SUIT';
               font-style: normal;
               font-weight: 500;
@@ -817,28 +836,32 @@
             font-weight: 300;
             font-size: 150px;
             line-height: 182px;
-            letter-spacing: -4px; // 3%
+            letter-spacing: -0.3rem;
             color: #DBB27A;
           }
           .object {
+            position: absolute;
+            left: calc(50% - 250px/2 + 225px);
+            bottom: 0;
+            width: 210px;
+            height: 182px;
             .twinkle {
               position: absolute;
-              right: 300px;
+              left: 0;
               bottom: 15px;
-              animation: opa 2s ease-in 3s;
+              // animation: opa 2s ease-in 3s;
             }
             .arrow {
               position: absolute;
-              right: 200px;
+              right: 0;
               bottom: 60px;
             }
           }
-          @keyframes opa {
-            0% {opacity: 0;}
-            50% {opacity: 0.5;}
-            100%{opacity: 1;}
-            
-          }
+          // @keyframes opa {
+          //   0% {opacity: 0;}
+          //   50% {opacity: 0.5;}
+          //   100%{opacity: 1;}
+          // }
         }
       }
     }
@@ -1028,8 +1051,8 @@
         }
       }
       @keyframes decoLine {
-        0% {width: 1px; opacity: 0.5;}
-        100% {width: 360px; opacity: 0.7;}
+        from {width: 0px; opacity: 0.5;left: -100px;}
+        to {width: 22rem; opacity: 0.7;left: -10px;}
       }
     }
 
