--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@
 
 #wrap {
   max-width: 3840px;
-  min-width: 1920PX;
+  min-width: 1903px;
   width: 100%;
   height: 100%;
   position: relative;
@@ -21,7 +21,7 @@
 #wrap #header {
   z-index: 4;
   position: relative;
-  max-width: 1920px;
+  min-width: 1903px;
   width: 100%;
   margin: 0 auto;
 }
@@ -57,7 +57,6 @@
   font-family: "Outfit";
   font-style: normal;
   text-align: right;
-  cursor: pointer;
 }
 #wrap #main {
   z-index: 2;
@@ -80,6 +79,7 @@
 }
 #wrap #main .section .container {
   position: relative;
+  max-width: 1903px;
   width: 100%;
   margin: 0 auto;
 }
