--- a/css/style.scss
+++ b/css/style.scss
@@ -11,7 +11,8 @@
 
 #wrap {
   max-width: 3840px;
-  min-width: 1920PX;
+  // min-width: 1920PX;
+  min-width: 1903px;
   width: 100%;
   height: 100%;
   position: relative;
@@ -20,7 +21,8 @@
   #header {
     z-index: 4;    // z-index를 설정해줘야 다른 섹션에 다 보임
     position: relative;
-    max-width: 1920px;
+    // max-width: 1920px;
+    min-width: 1903px;
     width: 100%;
     margin: 0 auto;
     .header-container {
@@ -55,7 +57,7 @@
           font-family: 'Outfit';
           font-style: normal;
           text-align: right;
-          cursor: pointer;
+          // cursor: pointer;
         }
       } 
     }
@@ -78,8 +80,6 @@
       position: absolute;
       top:0;
       left:0;
-      // max-width: 3840px;
-      // min-width: 1920px;
       width: 100%;
       height: 100%;
       margin: 0 auto;
@@ -90,9 +90,9 @@
     //     display:none;
     // } 
       .container {
-        // position: fixed;
         position: relative;
         // max-width: 1920px;
+        max-width: 1903px;
         width: 100%;
         margin: 0 auto;
       }
