--- a/css/style.scss
+++ b/css/style.scss
@@ -12,7 +12,7 @@
 #wrap {
   max-width: 3840px;
   // min-width: 1920PX;
-  min-width: 1903px;
+  // min-width: 1903px;
   width: 100%;
   height: 100%;
   position: relative;
@@ -22,7 +22,7 @@
     z-index: 4;    // z-index를 설정해줘야 다른 섹션에 다 보임
     position: relative;
     // max-width: 1920px;
-    min-width: 1903px;
+    max-width: 1903px;
     width: 100%;
     margin: 0 auto;
     .header-container {
@@ -93,14 +93,15 @@
         position: relative;
         // max-width: 1920px;
         max-width: 1903px;
+        max-height: 938px;   //938px
         width: 100%;
+        height: 100%;
         margin: 0 auto;
       }
 
     }
     .section1 {
       .sec1_container {
-        height: 1000px;    
         .sec1_content {
           position: absolute;
           left: calc(50% - 800px);
