--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,6 @@
 
 #wrap {
   max-width: 3840px;
-  min-width: 1903px;
   width: 100%;
   height: 100%;
   position: relative;
@@ -21,7 +20,7 @@
 #wrap #header {
   z-index: 4;
   position: relative;
-  min-width: 1903px;
+  max-width: 1903px;
   width: 100%;
   margin: 0 auto;
 }
@@ -80,11 +79,10 @@
 #wrap #main .section .container {
   position: relative;
   max-width: 1903px;
+  max-height: 938px;
   width: 100%;
+  height: 100%;
   margin: 0 auto;
-}
-#wrap #main .section1 .sec1_container {
-  height: 1000px;
 }
 #wrap #main .section1 .sec1_container .sec1_content {
   position: absolute;
